--- a/books/templates/homepage.html
+++ b/books/templates/homepage.html
@@ -10,14 +10,14 @@
         <div class="col-lg-12">
             <picture>
                 <!-- Source for large screens -->
-                <source media="(min-width: 600px)" srcset="{% static 'images/woman-purple-book.jpg' %}">
+                <source media="(min-width: 600px)" srcset="{% static 'images/woman-purple-book.jpg' %}" aria-label="Banner Image - person reading a book">
                 <!-- Source for small screens -->
-                <img src="{% static 'images/man-reading-6.jpg' %}" alt="Banner Image" class="banner-image">
+                <img src="{% static 'images/man-reading-6.jpg' %}" alt="Banner Image" class="banner-image" aria-label="Banner Image - person reading a book">
             </picture>
             <div class="banner-text-box">
                 <h1>Welcome to PageTurner</h1>
                 <p>Browse Exciting Reads and Find Your Next Favorite Book</p>
-                <a href="{% url 'books' %}" class="btn btn-primary">See all books</a>
+                <a href="{% url 'books' %}" class="btn btn-primary" aria-label="see booklist">See all books</a>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
             <p>Join Page Turner and immerse yourself in a universe of stories. Discover new authors, interact with our expanding library, and keep track of your reading journey with ease</p>
             {% if not user.is_authenticated %}
                 <a class="btn btn-primary" {% if request.path == signup_url %}active{% endif %} aria-current="page"
-                href="{% url 'account_signup' %}">Create an account now!</a>
+                href="{% url 'account_signup' %}" aria-label="Create an Account">Create an account now!</a>
             {% endif %}
         </div>
     </div>
@@ -52,14 +52,14 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline">
+                            <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline" aria-labels="book details">
                                 <div class="d-flex">
                                     <!-- Use a default book cover image if it has no cover image in the database -->
                                     <div class="image-container me-3">
                                         {% if book.cover_image.url == 'https://res.cloudinary.com/dxtaxsd1v/image/upload/placeholder' %}
-                                        <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image" style="max-width: 100px;">
+                                        <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image" style="max-width: 100px;" aria-label="placeholder image for book">
                                         {% else %}
-                                        <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;">
+                                        <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;" aria-label="Book Cover Image">
                                         {% endif %}
                                     </div>
                                     <!-- Display basic book details -->
@@ -78,7 +78,7 @@
             <!-- See all books button -->
             <div class="row">
                 <div class="col-12 text-center mt-4">
-                    <a href="{% url 'books' %}" class="btn btn-primary">See all books</a>
+                    <a href="{% url 'books' %}" class="btn btn-primary" aria-label="see booklist">See all books</a>
                 </div>
             </div>
         </div>
@@ -90,15 +90,15 @@
     <div class="row w-100 remove-gutters">
         <div class="col-lg-12 d-flex p-0 image-position">
             <div class="missing-image-container">
-                <img src="{% static 'images/books-logo-purple.png' %}" alt="Missing your favourite book image" class="missingbook-image-1">
+                <img src="{% static 'images/books-logo-purple.png' %}" alt="Missing your favourite book image" class="missingbook-image-1" aria-label="Missing Your Favourite Book Image">
                 <div class="missingbook-text-box">
                     <h2>Missing Your Favourite Book?</h2>
                     <p>No Problem! Send in your book recommendations so we can keep the PageTurner library up to date</p>
-                    <a href="{% url 'book_request' %}" class="btn btn-primary">Request a Book</a>
+                    <a href="{% url 'book_request' %}" class="btn btn-primary" aria-label="Go to request a book">Request a Book</a>
                 </div>
             </div>
             <div class="missing-image-container hidden-container">
-                <img src="{% static 'images/reading-with-cat.jpg' %}" alt="Missing your favourite book image" class="missingbook-image-2">
+                <img src="{% static 'images/reading-with-cat.jpg' %}" alt="Missing your favourite book image" class="missingbook-image-2" aria-label="Image of Girl and cat reading">
             </div>
         </div>
     </div>
