--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -6,7 +6,7 @@
 <div class="container mt-1">
     <!-- Top left corner back button -->
     <div class="return-button">
-        <button class="back-button" onclick="goBack()">
+        <button class="back-button" onclick="goBack()" aria-label="Go back">
             <i class="fas fa-arrow-left"></i>
         </button>
     </div>
@@ -14,9 +14,9 @@
     <div class="row">
         <div class="col-md-4">
             {% if book.cover_image.url == 'https://res.cloudinary.com/dxtaxsd1v/image/upload/placeholder' %}
-            <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image">
+            <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image" aria-label="Book placeholder image">
             {% else %}
-            <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}">
+            <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" aria-label="Book cover">
             {% endif %}
         </div>
         <div class="col-md-8 mb-4">
@@ -68,16 +68,16 @@
                         {% if in_bookshelf %}
                             <form action="{% url 'remove_from_bookshelf' book.slug %}" method="post">
                                 {% csrf_token %}
-                                <button id="remove-from-bookshelf" class="btn btn-primary" data-book-slug="{{ book.slug }}">Remove from Bookshelf</button>
+                                <button id="remove-from-bookshelf" class="btn btn-primary" data-book-slug="{{ book.slug }}" aria-label="Remove book from bookshelf">Remove from Bookshelf</button>
                             </form>
                         {% else %}
                             <form action="{% url 'add_to_bookshelf' book.slug %}" method="post">
                                 {% csrf_token %}
-                                <button id="add-to-bookshelf" class="btn btn-primary" data-book-slug="{{ book.slug }}">Add to Bookshelf</button>
+                                <button id="add-to-bookshelf" class="btn btn-primary" data-book-slug="{{ book.slug }}" aria-label="Add book to the bookshelf">Add to Bookshelf</button>
                             </form>
                         {% endif %}
                     {% else %}
-                        <p>Please <a href="{% url 'account_login' %}">login</a> to add to your bookshelf.</p>
+                        <p>Please <a href="{% url 'account_login' %}" aria-label="login to add to bookshelf">login</a> to add to your bookshelf.</p>
                     {% endif %}
                 </div>
 
@@ -123,8 +123,8 @@
                                 <p class="text-warning">This comment is awaiting approval</p>
                             {% endif %}
                             {% if user.is_authenticated and comment.user == user %}
-                                <button class="btn btn-danger btn-delete" data-comment_id="{{ comment.id }}">Delete</button>
-                                <button class="btn btn-secondary btn-edit" data-comment_id="{{ comment.id }}">Edit</button>
+                                <button class="btn btn-danger btn-delete" data-comment_id="{{ comment.id }}" aria-label="delete comment">Delete</button>
+                                <button class="btn btn-secondary btn-edit" data-comment_id="{{ comment.id }}" aria-label="edit comment">Edit</button>
                             {% endif %}
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             <form id="commentForm" method="post">
                                 {{ comment_form | crispy }}
                                 {% csrf_token %}
-                                <button id="submitButton" type="submit" class="btn btn-primary btn-lg mt-2">Submit</button>
+                                <button id="submitButton" type="submit" class="btn btn-primary btn-lg mt-2" aria-label="submit comment">Submit</button>
                             </form>
                             <!-- Rating Section -->
                             <div class="row mt-4">
@@ -153,27 +153,27 @@
                                         <form id="ratingForm1" class="star-form" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="rating" value="1">
-                                            <button type="submit" class="far fa-star star-icon" data-value="1"></button>
+                                            <button type="submit" class="far fa-star star-icon" data-value="1" aria-label="1 star rating"></button>
                                         </form>
                                         <form id="ratingForm2" class="star-form" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="rating" value="2">
-                                            <button type="submit" class="far fa-star star-icon" data-value="2"></button>
+                                            <button type="submit" class="far fa-star star-icon" data-value="2" aria-label="2 star rating"></button>
                                         </form>
                                         <form id="ratingForm3" class="star-form" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="rating" value="3">
-                                            <button type="submit" class="far fa-star star-icon" data-value="3"></button>
+                                            <button type="submit" class="far fa-star star-icon" data-value="3" aria-label="3 star rating"></button>
                                         </form>
                                         <form id="ratingForm4" class="star-form" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="rating" value="4">
-                                            <button type="submit" class="far fa-star star-icon" data-value="4"></button>
+                                            <button type="submit" class="far fa-star star-icon" data-value="4" aria-label="4 star rating"></button>
                                         </form>
                                         <form id="ratingForm5" class="star-form" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="rating" value="5">
-                                            <button type="submit" class="far fa-star star-icon" data-value="5"></button>
+                                            <button type="submit" class="far fa-star star-icon" data-value="5" aria-label="5 star rating"></button>
                                         </form>
                                     </div>
                                     
@@ -211,9 +211,9 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" 
-                  data-bs-dismiss="modal">Close</button>
+                  data-bs-dismiss="modal" aria-label="Close">Close</button>
                 <a id="deleteConfirm" href="#" class="btn 
-                  btn-danger">Delete</a>
+                  btn-danger" aria-label=" confirm delete">Delete</a>
             </div>
         </div>
     </div>
