--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -12,7 +12,7 @@
             <form id="genreFilterForm" method="post">
                 {% csrf_token %}
                 <label class="genre-form-label" for="genre">Filter by genre:</label>
-                <select name="genre" id="genre">
+                <select name="genre" id="genre" aria-label="filter by genre">
                     <option value="">All genres</option>
                     {% for genre in genres %}
                         <option value="{{ genre.id }}" {% if request.GET.genre == genre.id|stringformat:"s" %}selected{% endif %}>
@@ -37,14 +37,14 @@
                 {% endif %}
                     <div class="card">
                         <div class="card-body">
-                            <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline">
+                            <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline" aria-label="see book details">
                                 <div class="d-flex">
                                     <!-- Use a default book cover image if no image was uploaded so defaulted to placeholder -->
                                     <div class="image-container me-3">
                                         {% if book.cover_image.url == 'https://res.cloudinary.com/dxtaxsd1v/image/upload/placeholder' %}
-                                        <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image" style="max-width: 100px;">
+                                        <img class="img-fluid" src="https://res.cloudinary.com/dxtaxsd1v/image/upload/v1718572431/em43nwjwng89xzrgfdvq.jpg" alt="placeholder Image" style="max-width: 100px;" aria-label="placeholder book cover">
                                         {% else %}
-                                        <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;">
+                                        <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;" aria-label="Book cover image">
                                         {% endif %}
                                     </div>
                                     <!-- Display basic book details -->
@@ -71,14 +71,14 @@
             <!-- If statement to display a previous button if required -->
             {% if page_obj.has_previous %}
             <li>
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link paginate-button"> &laquo; PREV </a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link paginate-button" aria-label="Previous page"> &laquo; PREV </a>
             </li>
             {% endif %}
 
             <!-- If statement to display a next button if required -->
             {% if page_obj.has_next %}
             <li>
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link paginate-button"> NEXT &raquo;</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link paginate-button" aria-label="Next page"> NEXT &raquo;</a>
             </li>
             {% endif %}
         </ul>
