Add missing aria-labels to 404.html

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -18,6 +18,6 @@
     {% endif %}
   </section>
   <div class="access__error--image">
-    <img src="{% static 'images/errors.jpg' %}" class= "error-cone" alt="Image reflecting setting issues">
+    <img src="{% static 'images/errors.jpg' %}" class= "error-cone" alt="Image reflecting setting issues" aria-label="error image">
   </div>
 {% endblock %}
