--- a/books/templates/homepage.html
+++ b/books/templates/homepage.html
@@ -10,14 +10,14 @@
         <div class="col-lg-12">
             <picture>
                 <!-- Source for large screens -->
-                <source media="(min-width: 600px)" srcset="{% static 'images/woman-purple-book.jpg' %}" aria-label="Banner Image - person reading a book">
+                <source media="(min-width: 600px)" srcset="{% static 'images/woman-purple-book.jpg' %}">
                 <!-- Source for small screens -->
-                <img src="{% static 'images/man-reading-6.jpg' %}" alt="Banner Image" class="banner-image" aria-label="Banner Image - person reading a book">
+                <img src="{% static 'images/man-reading-6.jpg' %}" alt="Banner Image" class="banner-image" aria-label="person reading a book">
             </picture>
             <div class="banner-text-box">
                 <h1>Welcome to PageTurner</h1>
                 <p>Browse Exciting Reads and Find Your Next Favorite Book</p>
-                <a href="{% url 'books' %}" class="btn btn-primary" aria-label="see booklist">See all books</a>
+                <a href="{% url 'books' %}" class="btn btn-primary" aria-label="see all books">See all books</a>
             </div>
         </div>
     </div>
@@ -52,7 +52,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline" aria-labels="book details">
+                            <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline">
                                 <div class="d-flex">
                                     <!-- Use a default book cover image if it has no cover image in the database -->
                                     <div class="image-container me-3">
