Fix errors after html validation

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -83,7 +83,7 @@
 
                 <hr>
                 <h3>Description</h3>
-                <p>{{ book.description|safe }}</p>
+                {{ book.description|safe }}
             </div>
         </div>
     </div>
