--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -6,18 +6,20 @@
 
 {% block content %}
 {% comment %} Error 404 content {% endcomment %}
-  <section class="error">
-    <h2 class="error__title">Page 404</h2>
-    <p>Something went wrong. The page is not found!</p>
-    {% if request.user.is_authenticated %}
-      <a href="{{ profile_page_url }}" aria-label="Go to Profile page" class="btn account__btn">
-        Go to the Profile Page
-      </a>
-    {% else %}
-      <a href="{{ home_url }}" aria-label="Go to Home page" class="btn account__btn">Go to the Home page</a>
-    {% endif %}
-  </section>
-  <div class="access__error--image">
-    <img src="{% static 'images/errors.jpg' %}" class= "error-cone" alt="Image reflecting setting issues" aria-label="error image">
+  <div class="error-container">
+      <section class="error">
+        <h2 class="error__title">Page 404</h2>
+        <p>Something went wrong. The page is not found!</p>
+        {% if request.user.is_authenticated %}
+          <a href="{{ profile_page_url }}" aria-label="Go to Profile page" class="btn account__btn">
+            Go to the Profile Page
+          </a>
+        {% else %}
+          <a href="{{ home_url }}" aria-label="Go to Home page" class="btn account__btn">Go to the Home page</a>
+        {% endif %}
+      </section>
+      <div class="access__error--image">
+        <img src="{% static 'images/errors.jpg' %}" class= "error-image" alt="Image reflecting setting issues" aria-label="error image">
+      </div>
   </div>
 {% endblock %}
