--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -18,6 +18,6 @@
   {% endif %}
 </section>
 <div class="access__error--image">
-    <img src="{% static 'images/errors.jpg' %}" class= "error-cone" alt="Image reflecting setting issues" aria-label="error image">
+    <img src="{% static 'images/errors.jpg' %}" class= "error-image" alt="Image reflecting setting issues" aria-label="error image">
   </div>
 {% endblock %}
