Fix errors in base and bookdetail html after validation

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -83,7 +83,9 @@
 
                 <hr>
                 <h3>Description</h3>
-                {{ book.description|safe }}
+                <article class="book-description">
+                    {{ book.description|safe }}
+                </article>
             </div>
         </div>
     </div>
