--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,12 @@
                         href="{{ books_url }}" aria-label="See all books">Books</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == book_request_url %}active{%endif%}"
-                          aria-current="page" href="{% url 'book_request' %}" aria-label="Request a book">Request a Book</a>
+                        <a class="nav-link {% if request.path == book_request_url %}active"
+                          aria-current="page{%endif%}" href="{% url 'book_request' %}" aria-label="Request a book">Request a Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == about_us_url %}active{%endif%}"
-                          aria-current="page" href="{% url 'about_us' %}" aria-label="About us">About Us</a>
+                        <a class="nav-link {% if request.path == about_us_url %}active"
+                          aria-current="page{%endif%}" href="{% url 'about_us' %}" aria-label="About us">About Us</a>
                     </li>
                 </ul>
 
@@ -87,15 +87,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}" aria-label="Logout">Logout</a>
+                            <a class="nav-link {% if request.path == logout_url %}active" aria-current="page{%endif%}" href="{% url 'account_logout' %}" aria-label="Logout">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                            <a class="nav-link {% if request.path == signup_url %}active" aria-current="page{%endif%}"
                                 href="{% url 'account_signup' %}" aria-label="Register an account">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}" aria-label="Login">Login</a>
+                            <a class="nav-link {% if request.path == login_url %}active" aria-current="page{%endif%}" href="{% url 'account_login' %}" aria-label="Login">Login</a>
                         </li>
                         {% endif %}
                     </ul>
