Change button text

--- a/books/templates/homepage.html
+++ b/books/templates/homepage.html
@@ -17,7 +17,7 @@
             <div class="banner-text-box">
                 <h1>Welcome to PageTurner</h1>
                 <p>Browse Exciting Reads and Find Your Next Favorite Book</p>
-                <a href="{% url 'books' %}" class="btn btn-primary" aria-label="see all books">See all books</a>
+                <a href="{% url 'books' %}" class="btn btn-primary" aria-label="see all books">Browse Books</a>
             </div>
         </div>
     </div>
